fix map not showing on ASUS phone

--- a/scss/busStopSelector.scss
+++ b/scss/busStopSelector.scss
@@ -30,7 +30,7 @@
     flex-direction: column;
 
     .map-area {
-      flex: 0 0 45%;
+      flex: 0 0.5 45vh;
 
       padding: 0;
       display: flex;
